# Langchain

AiCodingPractice/: .env  requirements.txt
AiCodingPractice/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
AiCodingPractice/Src/langchain/: Basics.py  agentwithcontext.py  agentwithcontext_fixed.py  emailagent.py  hil.py  langchainrag.py  langgraph.json  managingmsgs.py  mcpclient.py  mcpserver.py  memory.py  sampletools.py  simpleagent.py  travelagent.py  websearch.py  weddingplaner.py
AiCodingPractice/Src/langgraph/: agent.py  chain.py  chatbot.py  router.py  simplegraph.py  state.py
a2a-samples/: .gitignore  INTERVIEW_QUESTIONS.md  REPO_SUMMARY.md
a2a-samples/demo/ui/: main.py
agent-chat-ui/: INTERVIEW_QUESTIONS.md  REPO_SUMMARY.md  package-lock.json
agent2agent/: INTERVIEW_QUESTIONS.md  REPO_SUMMARY.md
agent2agent/a2a_friend_scheduling/.adk/: session.db
agent2agent/a2a_friend_scheduling/karley_agent_adk/: __main__.py  agent.py
agent2agent/a2a_friend_scheduling/nate_agent_crewai/: __main__.py  agent.py
agent2agent/a2a_simple/: agent_executor.py
deep-agents-ui/: .gitignore  INTERVIEW_QUESTIONS.md  REPO_SUMMARY.md
deepagents/: INTERVIEW_QUESTIONS.md  REPO_SUMMARY.md
deepagents-quickstarts/: INTERVIEW_QUESTIONS.md  REPO_SUMMARY.md
deepagents-quickstarts/deep_research/: agent.py  extract_report.py  run_agent.py
langchain/: .env.example  00_test_connection.py  01_basics_and_setup.py  02_prompting_concepts.py  03_lcel.py  04_tools.py  05_memory.py  06_chain_building.py  07_agents.py  08_multi_agent.py  09_langsmith.py  10_langgraph_agents.py  AZURE_SETUP.md  INTERVIEW_QUESTIONS.md  QUICKSTART.md  README.md  REPO_SUMMARY.md  langchaincrashcourse.py  langchainmiddlewear.py  requirements.txt
langchain-academy/: .env.example  INTERVIEW_QUESTIONS.md  REPO_SUMMARY.md  azure_openai_config.py  find_cells.py
langchain-academy/module-0/: basics.ipynb
langchain-academy/module-1/: agent-memory.ipynb  agent.ipynb  chain.ipynb  router.ipynb  simple-graph.ipynb
langchain-academy/module-1/studio/: agent.py  router.py
langchain-academy/module-2/: chatbot-external-memory.ipynb  chatbot-summarization.ipynb  multiple-schemas.ipynb  state-reducers.ipynb  state-schema.ipynb  trim-filter-messages.ipynb
langchain-academy/module-2/state_db/: example.db-shm  example.db-wal
langchain-academy/module-2/studio/: chatbot.py  (+2 more)
langchain-academy/module-3/: breakpoints.ipynb  dynamic-breakpoints.ipynb  edit-state-human-feedback.ipynb  streaming-interruption.ipynb  time-travel.ipynb
langchain-academy/module-4/: map-reduce.ipynb  parallelization.ipynb  research-assistant.ipynb  sub-graph.ipynb
langchain-academy/module-5/: memory_agent.ipynb  memory_store.ipynb  memoryschema_collection.ipynb  memoryschema_profile.ipynb
langchain-barber-agent/: .env.example  .gitignore  .pre-commit-config.yaml  INTERVIEW_QUESTIONS.md  LICENSE  README.md  REPO_SUMMARY.md  alembic.ini  app.py  pyproject.toml  run.py
langchain-barber-agent/.github/workflows/: ci.yml
langchain-barber-agent/alembic/: env.py
langchain-barber-agent/alembic/versions/: 997072f64001_initial_migration.py
langchain-barber-agent/docs/: AGENT_IMPLEMENTATIONS.md  ARCHITECTURE.md  MIDDLEWARE.md
langchain-barber-agent/src/: __init__.py  __version__.py
langchain-barber-agent/src/agent/: __init__.py  agent.py  graph.py  prompt.py  state.py
langchain-barber-agent/src/agent/llm/: __init__.py  registry.py
langchain-barber-agent/src/agent/middleware/: __init__.py  availability.py  barber_info.py  booking.py  business_rules.py  conversation_summary.py  customer_lookup.py  service_catalog.py  usage_tracking.py
langchain-barber-agent/src/agent/tools/: __init__.py  availability.py  barber.py  booking.py  customer.py  service.py
langchain-barber-agent/src/api/: main.py
langchain-barber-agent/src/api/models/: __init__.py  database.py  schemas.py
langchain-barber-agent/src/api/routers/: __init__.py  barbers.py  bookings.py  customers.py  services.py
langchain-barber-agent/src/core/: __init__.py  config.py  database.py
langchain-barber-agent/src/utils/: list_data.py  seed_data.yaml  seed_db.py
langchain-barber-agent/tests/integration/: conftest.py  test_agent_middleware.py  test_barbers_api.py  test_bookings_api.py  test_customers_api.py  test_health.py  test_services_api.py
langchain-barber-agent/tests/unit/: test_availability_middleware.py  test_barber_info_middleware.py  test_booking_middleware.py  test_business_rules_middleware.py  test_conversation_summary_middleware.py  test_customer_lookup_middleware.py  test_service_catalog_middleware.py  test_usage_tracking_middleware.py
langchain-crash-course/: INTERVIEW_QUESTIONS.md  REPO_SUMMARY.md
langchain-crash-course/1_chat_models/: 1_chat_model_basic.py  2_chat_model_basic_conversation.py
langchain_data_agent/: INTERVIEW_QUESTIONS.md  REPO_SUMMARY.md  test_a2a_client.py
langchain_data_agent/docs/: CONTEXT_MANAGEMENT.md  MULTI_AGENT_COMMUNICATION.md
lca-langchainV1-essentials/python/: AZURE_SETUP.md  Azure_OpenAI_QuickStart.ipynb  L1_fast_agent.ipynb  L2_messages.ipynb  L3_streaming.ipynb  L4_tools.ipynb  L5_tools_with_mcp.ipynb  L6_memory.ipynb  L7_structuredOutput.ipynb  L8_dynamic.ipynb  L9_HITL.ipynb  find_model_references.py
lca-langgraph-essentials/: INTERVIEW_QUESTIONS.md  REPO_SUMMARY.md
lca-langgraph-essentials/python/: L1_nodes.ipynb  L2_edges.ipynb  L3-L4_cedges_memory.ipynb  L5_interrupt.ipynb  L6_EmailAgent.ipynb  L6_EmailAgent.py  README.md  azure_openai_utils.py  example.env
lca-lc-foundations/: AZURE_OPENAI_SETUP.md  INTERVIEW_QUESTIONS.md  MIGRATION_SUMMARY.md  QUICKSTART.md  README.md  REPO_SUMMARY.md  azure_openai_config.py  example.env  update_notebooks.py
(+56 files in other folders)
